--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -3,6 +3,13 @@
 .app {
     .header {
        color: $header-color;
+       min-height: fit-content;
+       font-size: 1.2rem;
+       font-weight: bold;
+
+       .logo-nav {
+        font-size: 2rem;
+       }
     }
     .footer {
         color: $footer-color;
@@ -12,12 +19,20 @@
     }
 }
 
+.container {
+  max-width: 85% !important;
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+}
+
 .card-course-item {
     margin-top: 16px;
-    margin-right: 16px;
-    width: 18rem;
-    img {
-        width: 100%;
-        height: 18rem;
-    }
+   
+}
+
+.user-avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 4px;
 }
