--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,16 +1,28 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Viet's Blog</a>
+<nav class="header navbar navbar-expand-lg navbar-dark bg-dark">
+ <div class="container">
+   <a class="navbar-brand logo-nav" href="/">Viet's Blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <img src="https://scontent.fdad1-4.fna.fbcdn.net/v/t39.30808-6/495733831_1089973136264568_1562500595857249328_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFJGyY0-1vddf3EDGu0FdZiYD74WVGaNGNgPvhZUZo0Y871qiU4FzIQM7I30cEFLAwZuGpF_ltkDWP1P0XhL00R&_nc_ohc=wFOyNLigi8MQ7kNvwGdgeNh&_nc_oc=Adl6HCgAGhRaVJcQVEHQjmyhbgfcqU7wj6wdiQq_-byWyrRIRsknWs_I7GB07xEJLIg&_nc_zt=23&_nc_ht=scontent.fdad1-4.fna&_nc_gid=iprJyMEe9iR0JK20FGWYew&oh=00_AfRPuA8lt_nM14kYwQ1JDXv66EhlISQ3YW3Ni8d2i1aPpg&oe=687F9B72" alt="" class="user-avatar">
+          Hoang Viet
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="/courses/create">Đăng ký khóa học</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/me/courses">Khóa học của tôi</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/me/news">Bài đăng của tôi</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/">Đăng suất</a>
+        </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/courses/create">Đăng ký khóa học</a>
-      </li>
+    </ul>
   </div>
+ </div>
 </nav>
