--- a/src/resources/views/me/stored-course.hbs
+++ b/src/resources/views/me/stored-course.hbs
@@ -20,12 +20,55 @@
                 <td>{{this.createAt}}</td>
                 <td>
                     <a href="/courses/{{this._id}}/edit" class="btn btn-link">Sửa</a>
-                {{!-- </td>
-                 <td> --}}
-                    <a href="" class="btn btn-link">Xóa</a>
+                    {{!--
+                </td>
+                <td> --}}
+                    <a class="btn btn-link" data-toggle="modal" data-id="{{this._id}}"
+                        data-target="#deleteModal">Xóa</a>
                 </td>
             </tr>
             {{/each}}
         </tbody>
     </table>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Xóa khóa học</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Bạn chắc chắn muốn xóa khóa học này?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa</button>
+            </div>
+        </div>
+    </div>
+</div>
+<form name="delete-course" method="post"></form>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var courseId
+        var btnDeleteCourse = document.getElementById('btn-delete-course');
+        var formDelete = document.forms['delete-course']
+
+        $('#deleteModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            courseId = button.data('id');
+        })
+
+
+        btnDeleteCourse.onclick = function () {
+            formDelete.action = '/courses/' + courseId + '?_method=DELETE';
+            formDelete.submit();
+        }
+    })
+</script>
