--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -9,7 +9,7 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-          <img src="https://scontent.fdad1-4.fna.fbcdn.net/v/t39.30808-6/495733831_1089973136264568_1562500595857249328_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFJGyY0-1vddf3EDGu0FdZiYD74WVGaNGNgPvhZUZo0Y871qiU4FzIQM7I30cEFLAwZuGpF_ltkDWP1P0XhL00R&_nc_ohc=wFOyNLigi8MQ7kNvwGdgeNh&_nc_oc=Adl6HCgAGhRaVJcQVEHQjmyhbgfcqU7wj6wdiQq_-byWyrRIRsknWs_I7GB07xEJLIg&_nc_zt=23&_nc_ht=scontent.fdad1-4.fna&_nc_gid=iprJyMEe9iR0JK20FGWYew&oh=00_AfRPuA8lt_nM14kYwQ1JDXv66EhlISQ3YW3Ni8d2i1aPpg&oe=687F9B72" alt="" class="user-avatar">
+          <img src="https://cafefcdn.com/zoom/700_438/203337114487263232/2022/3/3/photo1646280815645-1646280816151764748403.jpg" alt="" class="user-avatar">
           Hoang Viet
         </a>
         <div class="dropdown-menu">
