--- a/src/resources/views/me/stored-course.hbs
+++ b/src/resources/views/me/stored-course.hbs
@@ -50,7 +50,7 @@
                         <input class="form-check-input" type="checkbox" name="courseId[]" value="{{this._id}}">
                     </div>
                 </td>
-                <th scope="row">{{sum @index 1}}</th>
+                <th scope="row">{{this._id}}</th>
                 <td>{{this.name}}</td>
                 <td>{{this.videoId}}</td>
                 <td>{{this.createdAt}}</td>
