--- a/src/resources/views/me/stored-course.hbs
+++ b/src/resources/views/me/stored-course.hbs
@@ -26,7 +26,10 @@
         <thead>
             <tr>
                 <th scope="col"></th>
-                <th scope="col">#</th>
+                <th scope="col">
+                    ID
+                    {{{sortable '_id' _sort}}}
+                </th>
                 <th scope="col">
                     Tên khóa học
                     {{{sortable 'name' _sort}}}
